--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.2",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.474.0",
-    "next": "15.2.2",
+    "next": "^15.2.3",
     "next-images": "^1.8.5",
     "nextjs": "^0.0.3",
     "react": "19.0.0",
