--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.474.0",
-    "next": "^15.2.3",
+    "next": "^15.4.0-canary.33",
     "next-images": "^1.8.5",
     "nextjs": "^0.0.3",
     "react": "19.0.0",
