--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "next": "^15.4.0-canary.72",
     "next-images": "^1.8.5",
