--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google/gemini-cli": "^0.1.13",
     "@headlessui/react": "^2.2.4",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -32,7 +33,7 @@
     "jspdf": "^3.0.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
-    "next": "^15.4.1",
+    "next": "^15.4.2",
     "next-images": "^1.8.5",
     "nextjs": "^0.0.3",
     "react": "19.0.0",
@@ -45,7 +46,7 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/node": "^20.19.8",
+    "@types/node": "^20.19.9",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "postcss": "^8.5.6",
@@ -55,5 +56,9 @@
   "overrides": {
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4"
-  }
+  },
+  "trustedDependencies": [
+    "core-js",
+    "protobufjs"
+  ]
 }
