--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "autoprefixer": "^10.4.21",
-    "axios": "^1.10.0",
+    "axios": "1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -33,7 +33,7 @@
     "jspdf": "^3.0.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
-    "next": "^15.4.3",
+    "next": "^15.4.4",
     "next-images": "^1.8.5",
     "nextjs": "^0.0.3",
     "react": "19.0.0",
